# openCRF

./: CMakeLists.txt  CRFModel.cpp  CRFModel.h  Config.cpp  Config.h  Constant.h  DataSet.cpp  DataSet.h  FactorGraph.cpp  Readme.txt  Util.cpp  Util.h  main.cpp  mobiled.txt  model.txt  pred.txt  readme.md
